--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 starburst-enterprise-402-e.5.rpm filter=lfs diff=lfs merge=lfs -text
 starburst-enterprise-402-e.5.rpm.txt filter=lfs diff=lfs merge=lfs -text
+starburst-enterprise-402-e.5.rpm.zip filter=lfs diff=lfs merge=lfs -text
